Implementación de audios a las pantallas, musica para menú y tablero, Titulo y fuentes para titulo.